cmake_minimum_required(VERSION 3.20)
project(Compilation_principle)

set(CMAKE_CXX_STANDARD 14)

add_executable(Compilation_principle main.cpp)

add_executable(comp.1.1 comp.1.1.cpp)
add_executable(comp.1.2 comp.1.2.cpp)
add_executable(comp1.3 comp.1.3.cpp)
add_executable(comp.1.4 comp.1.4.cpp)
add_executable(comp1.5 comp1.5.cpp)
add_executable(comp1.5.2 comp1.5.2.cpp)
add_executable(byyl11 byyl11.cpp)
add_executable(comp1.3.2 comp1.3.2.cpp)
add_executable(comp1.3.3 comp1.3.3.cpp)
add_executable(comp1.3.4 comp1.3.4.cpp)
add_executable(wjf wjf.cpp)