cmake_minimum_required(VERSION 3.20)
project(Compilation_principle)

set(CMAKE_CXX_STANDARD 14)

add_executable(Compilation_principle main.cpp)

add_executable(comp.1.1 exp1/comp.1.1.cpp)
add_executable(comp.1.2 exp1/comp.1.2.cpp)
add_executable(comp1.3 exp1/comp.1.3.cpp)
add_executable(comp.1.4 exp1/comp.1.4.cpp)
add_executable(comp1.5 exp1/comp1.5.cpp)
add_executable(comp1.5.2 exp1/comp1.5.2.cpp)
add_executable(byyl11 exp1/byyl11.cpp)
add_executable(comp1.3.2 exp1/comp1.3.2.cpp)
add_executable(comp1.3.3 exp1/comp1.3.3.cpp)
add_executable(comp1.3.4 exp1/comp1.3.4.cpp)
add_executable(wjf exp1/wjf.cpp)
add_executable(2.1 exp2/2.1.cpp)
add_executable(2.2 exp2/2.2.cpp)
add_executable(wan exp2/wan.cpp)
add_executable(2.3 exp2/2.3.cpp)