cmake_minimum_required(VERSION 3.20)
project(pta_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(pta_3 main.cpp)

add_executable(3.1 3.1.cpp)
add_executable(3.2 3.2.cpp)
add_executable(3.3 3.3.cpp)
add_executable(3.3_ 3.3_.cpp)
add_executable(3.4 3.4.cpp)
add_executable(3.5 3.5.cpp)
add_executable(3.5.2 3.5.2.cpp)
add_executable(3.6 3.6.cpp)