cmake_minimum_required(VERSION 3.20)
project(day8_struct)

set(CMAKE_CXX_STANDARD 14)

add_executable(day8_struct main.cpp)

add_executable(01_struct_define 01_struct_define.cpp)
add_executable(02_struct_array 02_struct_array.cpp)
add_executable(k k.cpp)
add_executable(03_struct_pointer 03_struct_pointer.cpp)
add_executable(04_struct+nested 04_struct+nested.cpp)